# libprlearn

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  MLearning.cpp  MLearning.h  QLearning.h  RefinementTree.cpp  RefinementTree.h  SimpleMLearning.cpp  SimpleMLearning.h  SimpleRegressor.h  propts.h  structs.cpp  structs.h
tests/: CMakeLists.txt  qlearn.cpp
